# weezl

./: .travis.yml  Cargo.toml  Changes.md  README.md
.github/workflows/: rust.yml
benches/: Cargo-8-msb.lzw  binary-8-msb.lzw  corpus.rs  generators.rs  lib-8-msb.lzw  lowbit.rs  msb8.rs  strategy_compare.rs
docs/: 2026-04-streaming-decoder-investigation.md  streaming-decoder-investigation.md
examples/: lzw-compress.rs  lzw-decompress.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode0.rs  diff.rs  lowbit.rs  roundtrip.rs  roundtrip_all.rs  roundtrip_chunked.rs
src/: bitstream.rs  decode.rs  encode.rs  enlzw.rs  error.rs  lib.rs  lzw.rs  relzw.rs
tests/: async.rs  clamp_observation_corrupt_input.rs  clamp_observation_good_data.rs  end_of_buffer.rs  fuzz_panic_regression.rs  lowbit_roundtrip.rs  progress_into_buffer.rs  regression_gif.rs  roundtrip.rs  roundtrip_vec.rs  streaming_parity.rs  yield_on_full_regression.rs
