[package]
name = "weezl"
version = "0.1.0-alpha"
license = "MIT/Apache-2.0"
description = "Fast LZW compression and decompression."
authors = ["HeroicKatora <andreas.molzer@gmx.de>"]
readme = "README.md"
repository = "https://github.com/image-rs/lzw.git"
edition = "2018"

[lib]
name = "weezl"
bench = false

[dev-dependencies]
criterion = "0.3.1"

[features]
default = ["std"]
# Enable usage of the standard library and in particular any interface that
# requires the io interfaces `Read` and `Write`.
std = ["alloc"]
# Enable usage of the `alloc` crate. You should always have this feature
# enabled. Without this feature neither the encoder nor the decoder exists.
# This is purely a reservation for future possibilities.
alloc = []

[[bin]]
name = "lzw"
path = "bin/lzw.rs"
bench = false
required-features = ["std"]

[[bench]]
name = "msb8"
harness = false
