[package]
name = "weezl"
version = "0.2.0"
rust-version = "1.56.0"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "Fast LZW compression and decompression."
authors = ["The image-rs Developers"]
readme = "README.md"
repository = "https://github.com/image-rs/weezl"
documentation = "https://docs.rs/weezl"
exclude = ["benches/*.lzw"]

[lib]
name = "weezl"
bench = false

[dependencies.futures]
optional = true
version = "0.3.12"
default-features = false
features = ["std"]

[dev-dependencies]
criterion = "0.3.1"
# Used by the `corpus` benchmark to download test images from
# imazen/codec-corpus on first run and cache them locally.
codec-corpus = "1"
# PNG decoding for the `corpus` benchmark — we decode source images to
# raw pixel bytes before re-encoding them as GIF and TIFF.
png = "0.18"
# GIF encoder for the `corpus` benchmark. We write full GIF files (via
# `Frame::from_rgb` / `from_palette_pixels`), then extract the embedded
# LZW stream and decode it through weezl under test. The published gif
# crate depends on weezl 0.1.10; Cargo resolves that alongside our path
# override, so there is no version conflict.
gif = "0.14"
# TIFF encoder for the `corpus` benchmark. We write full TIFF files with
# LZW compression, then slice the strip out of the container and decode
# it through weezl under test. Same coexistence story as gif.
tiff = { version = "0.11", default-features = false, features = ["lzw"] }
[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["macros", "io-util", "net", "rt", "rt-multi-thread"]
[dev-dependencies.tokio-util]
version = "0.6.2"
default-features = false
features = ["compat"]

[features]
default = ["std"]
# Enable usage of the standard library and in particular any interface that
# requires the io interfaces `Read` and `Write`.
std = ["alloc"]
# Enable usage of the `alloc` crate. You should always have this feature
# enabled. Without this feature neither the encoder nor the decoder exists.
# This is purely a reservation for future possibilities.
alloc = []
# Enable usage of `async` through `futures`. This is basically the blocker
# for `1.0` as we may track its version. Note that this negates no_std right
# now but implicitly through being required from futures. We also use the
# `std::io::Error` interface. Note that this features is NOT supported on
# 1.34.2 but only on stable.
async = ["futures", "std"]

[[bin]]
name = "lzw"
path = "bin/lzw.rs"
bench = false
required-features = ["std"]

[[bench]]
name = "msb8"
harness = false
required-features = ["std"]

[[bench]]
name = "corpus"
harness = false
required-features = ["std"]

[[example]]
name = "lzw-compress"
required-features = ["std"]

[[example]]
name = "lzw-decompress"
required-features = ["std"]

[[test]]
name = "async"
required-features = ["async", "std"]

[[test]]
name = "roundtrip"
required-features = ["std"]

[[test]]
name = "roundtrip_vec"
required-features = ["alloc"]

[[test]]
name = "implicit_reset"
required-features = ["std"]

[[test]]
name = "end_of_buffer"
required-features = ["alloc"]

[package.metadata.docs.rs]
all-features = true
